--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@ark-ui/react": "^5.9.1",
     "@fontsource/lato": "^5.2.5",
+    "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
+    "tailwindcss-plugin-zag": "^0.1.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
