--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@tailwindcss/vite": "^4.1.7",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-nice-avatar": "^1.5.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "tailwindcss-plugin-zag": "^0.1.0",
