--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@ark-ui/react": "^5.9.1",
+    "@fontsource/fira-code": "^5.2.6",
+    "@fontsource/inter": "^5.2.5",
     "@fontsource/lato": "^5.2.5",
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
-    "react-confetti": "^6.4.0",
     "react-confetti-explosion": "^2.1.2",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-nice-avatar": "^1.5.0",
