--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-nice-avatar": "^1.5.0",
-    "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "tailwindcss-plugin-zag": "^0.1.0",
     "tiny-invariant": "^1.3.3",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
