--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwindcss": "^4.1.7",
     "tailwindcss-plugin-zag": "^0.1.0",
     "tiny-invariant": "^1.3.3",
+    "use-sound": "^5.0.0",
     "usehooks-ts": "^3.1.1",
     "zod": "^3.24.4"
   },
