--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "globals": "^16.1.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-singlefile": "^2.2.0"
   },
   "packageManager": "pnpm@10.11.0"
 }
