--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "games",
-  "private": true,
-  "version": "0.0.0",
+  "name": "rock-paper-scissors",
   "type": "module",
+  "private": true,
+  "packageManager": "pnpm@10.11.1",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -10,40 +10,39 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ark-ui/react": "^5.9.1",
+    "@ark-ui/react": "^5.13.0",
     "@fontsource/fira-code": "^5.2.6",
-    "@fontsource/inter": "^5.2.5",
-    "@fontsource/lato": "^5.2.5",
-    "@hookform/resolvers": "^5.0.1",
-    "@tailwindcss/vite": "^4.1.7",
-    "lucide-react": "^0.511.0",
+    "@fontsource/inter": "^5.2.6",
+    "@fontsource/lato": "^5.2.6",
+    "@hookform/resolvers": "^5.1.0",
+    "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.4",
+    "react-hook-form": "^7.57.0",
     "react-nice-avatar": "^1.5.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7",
-    "tailwindcss-plugin-zag": "^0.1.0",
+    "tailwind-zag": "^1.0.2",
     "tiny-invariant": "^1.3.3",
     "use-sound": "^5.0.0",
     "usehooks-ts": "^3.1.1",
-    "zod": "^3.24.4"
+    "zod": "^3.25.56"
   },
   "devDependencies": {
-    "@eslint/js": "^9.27.0",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.27.0",
+    "@eslint/js": "^9.28.0",
+    "@tailwindcss/vite": "^4.1.8",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.5.1",
+    "eslint": "^9.28.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.1.0",
+    "globals": "^16.2.0",
+    "tailwindcss": "^4.1.8",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.32.1",
+    "typescript-eslint": "^8.33.1",
     "vite": "^6.3.5",
     "vite-plugin-singlefile": "^2.2.0"
-  },
-  "packageManager": "pnpm@10.11.0"
+  }
 }
